@@ -31,16 +31,13 @@ let cpucount="$cpucount*1"; # sanitize
 
 system_ram=`cat /proc/meminfo |grep MemTotal |cut -c 15-23`
 
-multiplier="3/5"
+multiplier="2/3"
 let java_ram="$system_ram*$multiplier" 
-# 60 % ram 
-let maxnewsize="$java_ram*3/5"
-# 60 % of java ram is new pool 
+let maxnewsize="$java_ram/2"
 
-default_java_opts="-Xms${java_ram}k -Xmx${java_ram}k -Xss256k -server"
-default_java_opts="$default_java_opts -XX:NewSize=${maxnewsize}k -XX:MaxNewSize=${maxnewsize}k "
+default_java_opts="-Xms${java_ram}k -Xmx${java_ram}k -Xss256k -server -Djava.awt.headless=true -XX:CompileThreshold=1500 "
 default_java_opts="$default_java_opts -Dorg.apache.commons.logging.Log=org.apache.commons.logging.impl.Jdk14Logger "
-default_java_opts="$default_java_opts -Djava.awt.headless=true "
+default_java_opts="$default_java_opts -XX:NewSize=${maxnewsize}k -XX:MaxNewSize=${maxnewsize}k "
 
 
 if [ -e /ssg/etc/conf/JVM ]; then
@@ -51,17 +48,14 @@ fi
 
 if [ $cpucount = 1 ]; then
 	# single cpu
-	default_java_opts="$default_java_opts -XX:+AggressiveHeap -XX:+DisableExplicitGC -Xbatch"
+	default_java_opts="$default_java_opts -XX:+DisableExplicitGC "
 else
-	# java 1.5 doesn't seem to want the other options
 	if [ `expr $JAVA_HOME : ".*1\.4.*"` != 0 ]; then 
 		default_java_opts="$default_java_opts -XX:+UseParNewGC -XX:ParallelGCThreads=$cpucount "
 		default_java_opts="$default_java_opts -XX:+UseConcMarkSweepGC -XX:CMSInitiatingOccupancyFraction=90"
 		default_java_opts="$default_java_opts -XX:SurvivorRatio=128 -XX:MaxTenuringThreshold=0"
 	else 
-		# at the moment, 1.5 seems self tuning. Lets try this option
-		default_java_opts="$default_java_opts -XX:+AggressiveHeap -XX:+DisableExplicitGC -Xbatch"
-		# default_java_opts="$default_java_opts -XX:+UseParNewGC -XX:ParallelGCThreads=$cpucount "
+		default_java_opts="$default_java_opts -XX:+DisableExplicitGC -XX:+UseParallelGC"
 	fi
 fi
 
@@ -75,7 +69,6 @@ cygwin=false;
 case "`uname`" in
   CYGWIN*) cygwin=true ;;
 esac
-
 
 # add to path
 PATH=$PATH:$JAVA_HOME/bin:$SSG_HOME/bin
